--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
   "cy:open": "cypress open --config-file=cypress.config.js",
   "cy:open:mobile": "cypress open --config viewportWidth=410 viewportHeight=860",
-  "test": "cypress run",
+  "test": "cypress run --config-file=cypress.config.js",
   "test:mobile": "cypress run --config viewportWidth=410 viewportHeight=860"
   },
   "repository": {
